Commit Front Page
Commit Front Page

--- a/ecommrce/App/views/login.html
+++ b/ecommrce/App/views/login.html
@@ -153,9 +153,9 @@
                             <div class="book1">
                                 <img src="../../ItemImage/book1.png" alt="book1">
                             </div>
-                            <h2>IELTS SPEAKING TIPS</h2>
+                            <h2>Summer WorkWear </h2>
                             <p>
-                                Disocver how to increase your IELTS speaking score to 7.0 and beyond
+                                Stay Cool On Job SHOP NOW!!!!!!
                             </p>
                             <a href="#">Learn More</a>
                         </div>
@@ -165,9 +165,9 @@
                             <div class="book1">
                                 <img src="../../ItemImage/book2.png" alt="book1">
                             </div>
-                            <h2>IELTS Cambridge English</h2>
+                            <h2>Gardening Power Tools</h2>
                             <p>
-                                Touchstone Eudcationals Pvt Ltd. IELTS PTE SPOKEN ENGLISH
+                                Keep the Garden Looking Great All year Round! SHOP Now!!!!!
                             </p>
                             <a href="#" style="background: #cd152f;">Learn More</a>
                         </div>
@@ -239,11 +239,11 @@
                             <li><a href="" ng-click="applyFilterByCourse('TOEFL')">TOEFL </a></li>
                             <li><a href="" ng-click="applyFilterByCourse('LIFE SKILLS')">LIFE SKILLS </a></li>
                         </ul>
-                        <h5>Product Type</h5>
+                        <!--<h5>Product Type</h5>
                         <ul>
                             <li><a href="" ng-click="applyFilterItemType('Digital')">Digital</a></li>
                             <li><a href="" ng-click="applyFilterItemType('Physical')">Physical</a></li>
-                        </ul>
+                        </ul>-->
 
                         <div class="news">
                             <h4>Sign Up for Send Newsletter</h4>
