--- a/ecommrce/App/views/login.html
+++ b/ecommrce/App/views/login.html
@@ -1,7 +1,6 @@
 ﻿<div id="wrap" class="animsition" style="animation-duration: 1.5s; opacity: 1;">
     <div class="page page-core page-login" ng-controller="ShopmainController">
-        <div class="top">
-            <!--<select class="form-control" name="right" ng-model="Country" ng-change="onCountryChange(Country)" ng-init="Country = options[5]" ng-options="l as l.Country for l in options"><option></option></select>-->
+        <!--<div class="top">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-right">
@@ -11,77 +10,78 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <nav class="navbar  navbar-expand-lg navbar-light">
                         <a class="navbar-brand" href="#">
                             <div class="logo">
-                                <img style="width:100px;height:100px " src="../../ItemImage/uk_tool_centre_logo.jpg" alt="uk_tool logo">
+                                <img style="width:150px;height:100px " src="../../ItemImage/uk_tool_centre_logo.jpg" alt="uk_tool logo">
                             </div>
                         </a>
                         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+
+                        <div class="container">
+                            <div class="header_top">
+                                <div class="header_top_left">
+                                    <div class="box_11" ng-click="ShowCart()" ng-show="getTotalCount() > 0">
+
+                                        <i class="icon-shopping-cart" />
+                                        <b>{{getTotalCount()}}</b> items, <b>{{getTotalPrice() | currency}}</b>
+                                        <span ng-show="getTotalCount() > 0">
+                                            <br />
+                                            this item is in the cart
+                                        </span>
+                                    </div>
+
+                                    <div class="clearfix"></div>
+                                </div>
+                                <div class="header_top_right">
+                                    <div class="lang_list">
+                                    </div>
+
+
+                                    <!-- start search-->
+                                    <div class="search-box">
+                                        <div id="sb-search" class="sb-search">
+                                            <form>
+                                                <input class="sb-search-input" placeholder="Enter your search term..." type="search" name="search" id="search">
+                                                <!--<input class="sb-search-submit" type="submit" value="">-->
+                                                <span class="sb-icon-search"></span>
+                                                <span><i class="phone">9988225604</i></span>|
+                                                <span><i class="">Mon - Fri 7:30 Am - 6:00 Pm</i></span>
+                                            </form>
+                                        </div>
+                                    </div>
+
+
+                                    <!----search-scripts---->
+
+                                    <script src="Scripts/classie1.js"></script>
+
+                                    <script src="Scripts/uisearch.js"></script>
+                                    <script>
+                                        new UISearch(document.getElementById('sb-search'));
+                                    </script>
+                                    <!----//search-scripts---->
+                                    <div class="clearfix"></div>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+
+                        </div>
                         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item active"><a class="nav-link" href="" ng-click="OpenHomePage()">Home <span class="sr-only">(current)</span></a> </li>
-                                <li class="nav-item"><a class="nav-link" href="" ng-click="OpenDetailPage()">Shop Portal</a> </li>
-
+                                <li class="nav-item"><a class="nav-link" href="" ng-click="OpenDetailPage()">Shop Hear</a> </li>
                                 <li class="nav-item"><a class="nav-link" href="#">Contact Us</a> </li>
                             </ul>
                         </div>
                     </nav>
                 </div>
             </div>
-            <div class="container">
-                <div class="header_top">
-                    <div class="header_top_left">
-                        <div class="box_11" ng-click="ShowCart()" ng-show="getTotalCount() > 0">
-
-                            <i class="icon-shopping-cart" />
-                            <b>{{getTotalCount()}}</b> items, <b>{{getTotalPrice() | currency}}</b>
-                            <span ng-show="getTotalCount() > 0">
-                                <br />
-                                this item is in the cart
-                            </span>
-                        </div>
-
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="header_top_right">
-                        <div class="lang_list">
-                        </div>
-
-
-                        <!-- start search-->
-                        <div class="search-box">
-                            <div id="sb-search" class="sb-search">
-                                <form>
-                                    <input class="sb-search-input" placeholder="Enter your search term..." type="search" name="search" id="search">
-                                    <input class="sb-search-submit" type="submit" value="">
-                                    <span class="sb-icon-search"></span>
-                                    <span><i class="phone">9988225604</i></span>|
-                                    <span><i class="">Mon - Fri 7:30 Am - 6:00 Pm</i></span>
-                                </form>
-                            </div>
-                        </div>
-
-                       
-                        <!----search-scripts---->
-
-                        <script src="Scripts/classie1.js"></script>
-
-                        <script src="Scripts/uisearch.js"></script>
-                        <script>
-                            new UISearch(document.getElementById('sb-search'));
-                        </script>
-                        <!----//search-scripts---->
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="clearfix"></div>
-                </div>
-
-            </div>
+        
         </div>
 
         <!-- header end here -->
