--- a/ecommrce/App/views/login.html
+++ b/ecommrce/App/views/login.html
@@ -90,7 +90,7 @@
         <div class="HomePage" ng-show="HomePage==true">
 
 
-            <div class="banner"></div>
+            <!--<div class="banner"></div>-->
             <div class="container section">
                 <div class="row">
                     <div class="col-lg-3 filter">
