--- a/ecommrce/Content/css/kendo.custom.css
+++ b/ecommrce/Content/css/kendo.custom.css
@@ -76,8 +76,8 @@
   color: #396000;
 }
 .k-grid-norecords-template {
-  background-color: #ffffff;
-  border: 1px solid #ebebeb;
+    background-color: #ffffff;
+    border: 1px solid #ebebeb;
 }
 .k-in,
 .k-item,
@@ -176,25 +176,26 @@ td.k-group-cell,
 }
 .k-pivot-rowheaders .k-alt .k-alt,
 .k-header.k-alt {
-  background-color: #ebebeb;
+    background-color: #ebebeb;
 }
 .k-textbox,
 .k-autocomplete.k-header,
 .k-dropdown-wrap.k-state-active,
 .k-picker-wrap.k-state-active,
 .k-numeric-wrap.k-state-active {
-  border-color: #ebebeb;
-  background-color: #ffffff;
+    border-color: #ebebeb;
+    background-color: #ffffff;
 }
-.k-textbox > input,
-.k-autocomplete .k-input,
-.k-dropdown-wrap .k-input,
-.k-autocomplete.k-state-focused .k-input,
-.k-dropdown-wrap.k-state-focused .k-input,
-.k-picker-wrap.k-state-focused .k-input,
-.k-numeric-wrap.k-state-focused .k-input {
-  border-color: #ebebeb;
-}
+    .k-textbox > input,
+    .k-autocomplete .k-input,
+    .k-dropdown-wrap .k-input,
+    .k-autocomplete.k-state-focused .k-input,
+    .k-dropdown-wrap.k-state-focused .k-input,
+    .k-picker-wrap.k-state-focused .k-input,
+    .k-numeric-wrap.k-state-focused .k-input {
+        border-color: #ebebeb;
+       
+    }
 input.k-textbox,
 textarea.k-textbox,
 input.k-textbox:hover,
@@ -265,6 +266,7 @@ textarea.k-textbox:hover,
   background-image: none, linear-gradient(to bottom, );
   background-position: 50% 50%;
   background-color: #ffffff;
+
 }
 .k-block,
 .k-header,
@@ -451,19 +453,20 @@ html .km-pane-wrapper .k-header {
   color: #2e2e2e;
   border-color: #cccccc;
   background-color: #f7f8f9;
+
 }
 .k-button:active,
 .k-button.k-state-active {
-  color: #ffffff;
-  background-color: #0bb6ea;
-  border-color: #0bbaef;
+    color: #ffffff;
+    background-color: #c9272e;
+    border-color: #c9272e;
 }
-.k-button:active:hover,
-.k-button.k-state-active:hover {
-  color: #ffffff;
-  border-color: #bdc5cd;
-  background-color: #11bff4;
-}
+    .k-button:active:hover,
+    .k-button.k-state-active:hover {
+        color: #ffffff;
+        border-color: #c9272e;
+        background-color: #c9272e;
+    }
 .k-button[disabled],
 .k-button.k-state-disabled,
 .k-state-disabled .k-button,
@@ -472,16 +475,13 @@ html .km-pane-wrapper .k-header {
 .k-state-disabled .k-button:active,
 .k-button.k-state-disabled:active {
   color: #b5b5b5;
-  border-color: #dbdbdb;
-  background-color: #ffffff;
-  background-image: none;
-  background-image: none, linear-gradient(to bottom, );
+  
 }
 .k-button:focus:not(.k-state-disabled):not([disabled]) {
-  box-shadow: inset 0 0 3px 1px #cccccc;
+  
 }
 .k-button:focus:active:not(.k-state-disabled):not([disabled]) {
-  box-shadow: inset 0 0 3px 1px #0994be;
+  
 }
 .k-menu .k-state-hover > .k-state-active {
   background-color: transparent;
@@ -492,11 +492,13 @@ html .km-pane-wrapper .k-header {
   border-color: #0bbaef;
   background-image: none;
   background-image: none, linear-gradient(to bottom, rgba(255, 255, 255, 0.2) 0px, rgba(255, 255, 255, 0) 100%);
+
 }
 .k-menu .k-link.k-state-active {
   background-color: #ffffff;
   border-color: #b5b5b5;
   color: #313131;
+
 }
 .k-menu .k-state-hover > .k-link {
   color: #2e2e2e;
@@ -599,22 +601,22 @@ html .km-pane-wrapper .k-header {
 .k-scheduler .k-scheduler-toolbar .k-state-selected,
 .k-scheduler .k-today.k-state-selected,
 .k-marquee-color {
-  color: #ffffff;
-  background-color: #0bb6ea;
-  border-color: #0bbaef;
+    color: #fff !important;
+    background-color: #cd152f;
+    border-color: #0bbaef;
 }
 .k-virtual-item.k-first,
 .k-group-header + .k-list > .k-item.k-first,
 .k-static-header + .k-list > .k-item.k-first {
-  border-top-color: #cccccc;
+    border-top-color: #cccccc;
 }
 .k-group-header + div > .k-list > .k-item.k-first:before {
-  border-top-color: #cccccc;
+    border-top-color: #cccccc;
 }
 .k-popup > .k-group-header,
 .k-popup > .k-virtual-wrap > .k-group-header {
   background: #cccccc;
-  color: #ffffff;
+
 }
 .k-popup .k-list .k-item > .k-group {
   background: #cccccc;
@@ -753,6 +755,7 @@ div.k-filebrowser-dropzone em {
   background-image: none, linear-gradient(to bottom, );
   background-position: 50% 50%;
   border-color: #cccccc;
+
 }
 .km-pane-wrapper .k-mobile-list input:not([type="checkbox"]):not([type="radio"]),
 .km-pane-wrapper .km-pane .k-mobile-list select:not([multiple]),
@@ -1574,42 +1577,38 @@ textarea.k-textbox,
 }
 .k-primary,
 .k-overflow-container .k-primary {
-  color: #ffffff;
-  border-color: #0aabdb;
-  background-image: none;
-  background-image: none, linear-gradient(to bottom, rgba(255, 255, 255, 0.2) 0px, rgba(255, 255, 255, 0) 100%);
-  background-position: 50% 50%;
-  background-color: #24c4f5;
-  box-shadow: none;
+    color: #ffffff;
+    border-color: #c9272e;
+    background-image: none;
+    background-image: none, linear-gradient(to bottom, rgba(255, 255, 255, 0.2) 0px, rgba(255, 255, 255, 0) 100%);
+    background-position: 50% 50%;
+    background-color: #c9272e;
+    box-shadow: none;
 }
-.k-primary:focus,
-.k-primary.k-state-focused {
-  color: #ffffff;
-  border-color: #0aabdb;
-  background-image: none;
-  background-image: none, linear-gradient(to bottom, );
-  box-shadow: 0 0 3px 0 #0bb6ea;
-}
-.k-primary:hover {
-  color: #ffffff;
-  border-color: #bdc5cd;
-  background-image: none;
-  background-image: none, linear-gradient(to bottom, );
-  background-color: #11bff4;
-  box-shadow: none;
-}
+    .k-primary:focus,
+    .k-primary.k-state-focused {
+        color: #ffffff;
+        border-color: #c9272e;
+ 
+        box-shadow: 0 0 3px 0 #0bb6ea;
+    }
+    .k-primary:hover {
+        color: #ffffff;
+        border-color: #c9272e;
+ 
+        background-color: #c9272e;
+        box-shadow: none;
+    }
 .k-primary:focus:active:not(.k-state-disabled):not([disabled]),
 .k-primary:focus:not(.k-state-disabled):not([disabled]) {
   box-shadow: 0 0 3px 0 #0bb6ea;
 }
-.k-primary:active {
-  color: #ffffff;
-  border-color: #0bbaef;
-  background-image: none;
-  background-image: none, linear-gradient(to bottom, rgba(255, 255, 255, 0.2) 0px, rgba(255, 255, 255, 0) 100%);
-  background-color: #0cb5e9;
-  box-shadow: none;
-}
+    .k-primary:active {
+        color: #ffffff;
+        border-color: #c9272e;
+        background-color: #c9272e;
+        box-shadow: none;
+    }
 .k-primary.k-state-disabled,
 .k-state-disabled .k-primary,
 .k-primary.k-state-disabled:hover,
