--- a/ecommrce/App/views/login.html
+++ b/ecommrce/App/views/login.html
@@ -1,5 +1,5 @@
 ﻿<div id="wrap" class="animsition" style="animation-duration: 1.5s; opacity: 1;">
-    <div class="page page-core page-login" ng-controller="ShopmainController">
+    <div class="" ng-controller="ShopmainController">
         <div class="top">
             <div class="container">
                 <div class="row">
