--- a/ecommrce/App/Admin/views/SubCategoryView.html
+++ b/ecommrce/App/Admin/views/SubCategoryView.html
@@ -32,7 +32,7 @@
                         <p><strong>Category Name</strong></p>
                         <div class="input-sec">
                             <select class="form-control" kendo-combo-box style="width: 100%; height:34px;"
-                                    k-ng-model="Campus.Category"
+                                    k-ng-model="SubCategory.Category"
                                     ng-model="Category"
                                     k-placeholder="'Select Category'"
                                     k-data-text-field="'Name'"
