--- a/ecommrce/App/Admin/views/BrandView.html
+++ b/ecommrce/App/Admin/views/BrandView.html
@@ -23,66 +23,52 @@
 <div ng-controller="BrandController" class="">
     <div class="col-md-12"><h2 class="page-heading">Brand</h2></div>
 
-    <div class="panel">
-        <div class="col-md-12">
 
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="sec">
-                        <p><strong>Brand Name</strong></p>
-                        <div class="input-sec">
-                            <input class="form-control" type="text" ng-model="Brand.BrandDescription1" placeholder="Brand Name" ng-change="ClearValMsgBrandDescription1()" />
-                            <span ng-show="BrandDescription1==true" class="errorctmMsg">Please enter Brand name.</span>
-                            <small>Enter Brand Name</small>
-                        </div>
+    <h4><strong>Offer Letter Processing</strong></h4>
+
+    <div id="dv_OfferLetter" class="ctm_Personal">
+        <!--ng-hide="false"-->
+
+        <div class="row">
+
+            <div class="col-md-6">
+                <div class="sec">
+                    <p><strong>file Name</strong></p>
+                    <div class="input-sec">
+                        <input type="text" placeholder="file Name" class="form-control" ng-model="Brand.Name">
+                        <small>file Name</small>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="sec">
-                        <p><strong>Sequence</strong></p>
-                        <div class="input-sec">
-                            <input class="form-control" type="text" numbers-only limit-to="10" placeholder="Sequence No" ng-model="Brand.SequenceNo1" />
-                            <small>Enter Sequence No</small>
-                        </div>
-                    </div>
+            </div>
 
+            <div class="col-md-6 ">
+                <div class="sec">
+                    <p><strong>Upload file Image</strong></p>
+                    <div class="input-sec">
 
-                </div>
-                <div class="col-md-4">
-                    <div class="sec">
-                        <p><strong>Active</strong></p>
-                        <div class="input-sec">
-                            <label class="switch" ng-click="showIsTuchstoneStudent()">
-                                <input type="checkbox" ng-model="Brand.Active1">
-                                <span class="slider round"></span>
+                        <div style="margin:10px; text-align:center; font-size:18px; ">{{FileNameUpload}}</div>
+                        <div class="upload-img">
+                            <label class="custom-file-upload cutmCls-Manager cutmCls-Counselor cutmCls-Admission">
+                                <input type='file' ng-model-instant onchange="angular.element(this).scope().imageUpload(event)" />
+                                Choose Image
                             </label>
-                            <small>Active/ Inactive</small>
+
+                            <span ng-show="OLV_ShowFileNameUploadData==true" style="color:red">Please Upload Brand Image.</span>
                         </div>
+                        <!-- <span ng-show="PlsUploadOfferLetter==true" style="color:red">Please Upload Offer Letter.</span>-->
                     </div>
-
-
                 </div>
             </div>
 
-            <div class="pull-right">
-                <a class="red-btn" ng-click="SaveBrand()">{{btntextBrand}}</a>
-                <a class="red-btn" ng-click="ClearBrandFields()">Cancel</a>
-            </div>
-
-
         </div>
+        <input type="button" value="Save" class="red-btn" ng-click="SaveOfferLetterDetail()" />
+
     </div>
 
-    <div class="panel">
-        <div class="col-md-12">
-            <div id="BrandGrid" kendo-grid="gridBrand" options="BrandgridOptions" k-rebind="BrandGridRebind" k-on-change="onChangeBrandGrid({ selected: selected },data,dataItem,angularDataItem)" k-selectable="true" class="link-hover k-grid k-widget">
-            </div>
-        </div>
-    </div>
-
-
-
-
+    <div kendo-grid="grid"
+         id="KendoGrid"
+         class="link-hover"
+         k-options="GridOptions" k-rebind="screenResolution1" k-on-change="onChange({ selected: selected },data,dataItem,angularDataItem)" k-selectable="true"></div>
 
 
 </div>
