--- a/ecommrce/App/Admin/views/BrandView.html
+++ b/ecommrce/App/Admin/views/BrandView.html
@@ -61,7 +61,7 @@
             </div>
 
         </div>
-        <input type="button" value="Save" class="red-btn" ng-click="SaveOfferLetterDetail()" />
+        <input type="button" value="Save" class="red-btn" ng-click="SavebrandDetail()" />
 
     </div>
 
