--- a/ecommrce/App/Admin/views/ItemView.html
+++ b/ecommrce/App/Admin/views/ItemView.html
@@ -13,7 +13,7 @@
                     <div class="input-sec">
                         <select class="form-control" kendo-combo-box style="width: 100%;height:32px; "
                                 k-ng-model="Item.Brand"
-                                ng-model="CountryId"
+                                ng-model="BrandId"
                                 k-placeholder="'Select Brand'"
                                 k-data-text-field="'Name'"
                                 k-data-value-field="'Id'"
@@ -33,7 +33,7 @@
                     <div class="input-sec">
                         <select class="form-control" kendo-combo-box style="width: 100%;height:32px; "
                                 k-ng-model="Item.Category"
-                                ng-model="CountryId"
+                                ng-model="CategoryId"
                                 k-placeholder="'Select Category'"
                                 k-data-text-field="'Name'"
                                 k-data-value-field="'Id'"
@@ -53,7 +53,7 @@
                     <div class="input-sec">
                         <select class="form-control" kendo-combo-box style="width: 100%;height:32px; "
                                 k-ng-model="Item.SubCategory"
-                                ng-model="CountryId"
+                                ng-model="SubCategoryId"
                                 k-placeholder="'Select SubCategory'"
                                 k-data-text-field="'Name'"
                                 k-data-value-field="'Id'"
@@ -135,10 +135,10 @@
                     <p><strong>Upload Item Image 1</strong></p>
                     <div class="input-sec">
 
-                        <div style="margin:10px; text-align:center; font-size:18px; ">{{FileNameUpload}}</div>
+                        <div style="margin:10px; text-align:center; font-size:18px; ">{{FileNameUpload1}}</div>
                         <div class="upload-img">
                             <label class="custom-file-upload cutmCls-Manager cutmCls-Counselor cutmCls-Admission">
-                                <input type='file' ng-model-instant onchange="angular.element(this).scope().imageUpload1(event)" />
+                                <input type='file' ng-model-instant onchange="angular.element(this).scope().imagemainUpload1(event)" />
                                 Choose Image
                             </label>
 
@@ -153,10 +153,10 @@
                     <p><strong>Upload Item Image 2</strong></p>
                     <div class="input-sec">
 
-                        <div style="margin:10px; text-align:center; font-size:18px; ">{{FileNameUpload}}</div>
+                        <div style="margin:10px; text-align:center; font-size:18px; ">{{FileNameUpload2}}</div>
                         <div class="upload-img">
                             <label class="custom-file-upload cutmCls-Manager cutmCls-Counselor cutmCls-Admission">
-                                <input type='file' ng-model-instant onchange="angular.element(this).scope().imageUpload2(event)" />
+                                <input type='file' ng-model-instant onchange="angular.element(this).scope().imagemainUpload2(event)" />
                                 Choose Image
                             </label>
 
@@ -174,7 +174,7 @@
     <div kendo-grid="grid"
          id="KendoGrid"
          class="link-hover"
-         k-options="GridOptions" k-rebind="screenResolution1" k-on-change="onChange({ selected: selected },data,dataItem,angularDataItem)" k-selectable="true"></div>
+         k-options="GridOptionsItem" k-rebind="screenResolution1" k-on-change="onChange({ selected: selected },data,dataItem,angularDataItem)" k-selectable="true"></div>
 
 </div>
 
