Category and subcategory
Category and subcategory

--- a/ecommrce/App/Admin/views/CategoryView.html
+++ b/ecommrce/App/Admin/views/CategoryView.html
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <!--<div class="col-md-4">
                     <div class="sec">
                         <p><strong>Sequence</strong></p>
                         <div class="input-sec">
@@ -61,7 +61,7 @@
                     </div>
 
 
-                </div>
+                </div>-->
             </div>
 
             <div class="pull-right">
