--- a/ecommrce/App/Admin/views/SubCategoryView.html
+++ b/ecommrce/App/Admin/views/SubCategoryView.html
@@ -44,6 +44,7 @@
                                     ng-change="ClearValMsgCategoryDescription()"
                                     k-data-source="Categorydata"
                                     required></select>
+                            <span ng-show="SubCategoryCategory==true" class="errorctmMsg">Please select Category.</span>
                             <small>Enter Category Name</small>
                         </div>
                     </div>
@@ -58,7 +59,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <!--<div class="col-md-4">
                     <div class="sec">
                         <p><strong>Sequence</strong></p>
                         <div class="input-sec">
@@ -82,7 +83,7 @@
                     </div>
 
 
-                </div>
+                </div>-->
             </div>
 
             <div class="pull-right">
