changes for publishing

--- a/ecommrce/App/Admin/views/LandingPageVisa.html
+++ b/ecommrce/App/Admin/views/LandingPageVisa.html
@@ -20,5 +20,6 @@
     }
 </style>
 <div ng-controller="LandingPageVisaController" class="">
-dddddddddddddddddddddddddddddddddddddddd
+
+    <div class="center-align" > PAGE GRAPHS COMMING SOON   BE PATENCE  !!!!!!!!!!!!!!!!!!!! </div>
 </div>
